[package]
name = "wtt"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
nom = { workspace = true }
nom-language = { workspace = true }
ociman = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "wtt"
path = "src/main.rs"
