[package]
name = "wtt"
version = "0.0.7"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Git worktree manager using bare clones"
license = "MIT"
repository = "https://github.com/mbj/mrs/tree/main/wtt"
readme = "README.md"
keywords = ["git", "worktree", "bare", "clone"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
clap.workspace = true
git-proc.workspace = true
dirs.workspace = true
env_logger.workspace = true
log.workspace = true
nom.workspace = true
nom-language.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true

[[bin]]
name = "wtt"
path = "src/main.rs"
